--- a/index.html
+++ b/index.html
@@ -137,33 +137,31 @@
 				</div>
 			</div>
 			<div class="offer_2">
-				<div class="flex-container">
-					<div class="add_offer">
-						<h2>
-							Vans Old Skool мужские
-						</h2>
-						<hr size="2" color="red">
-						<p>
-							Первая модель кед Old Skool с узнаваемой полоской Vans. Вечная классика, актуальная при любых веяниях моды!
-						</p>
-					</div>
-					<div>
-						<img src="img/trainers_3.png" alt="Image">
-					</div>
+				<div class="add_offer">
+					<h2>
+						Vans Old Skool мужские
+					</h2>
+					<hr size="2" color="red">
+					<p>
+						Первая модель кед Old Skool с узнаваемой полоской Vans. Вечная классика, актуальная при любых веяниях моды!
+					</p>
 				</div>
-				<div class="flex-container">
-					<div>
-						<img src="img/trainers_4.png" alt="Image">
-					</div>
-					<div class="add_offer">
-						<h2>
-							Мужские кроссовки Nike Air Max 1/97
-						</h2>
-						<hr size="2" color="red">
-						<p>
-							Победитель народного голосования Vote Forward 2018, с лучшим винтажным дизайном! 
-						</p>
-					</div>
+				<div>
+					<img src="img/trainers_3.png" alt="Image">
+				</div>
+			</div>
+			<div class="offer_2">	
+				<div>
+					<img src="img/trainers_4.png" alt="Image">
+				</div>
+				<div class="add_offer">
+					<h2>
+						Мужские кроссовки Nike Air Max 1/97
+					</h2>
+					<hr size="2" color="red">
+					<p>
+						Победитель народного голосования Vote Forward 2018, с лучшим винтажным дизайном! 
+					</p>
 				</div>
 			</div>
 			<div class="head">
@@ -201,9 +199,111 @@
 					Культовая модель 1997-го года с самой большой воздушной подушкой Air. Получите максимум комфорта! Дизайн подчеркнут стремительными линиями, которые вдохновлены высокоскоростным японским «поездом-пулей» Синкансэн.
 				</p>
 			</div>
+			<div class="offer_3">
+				<div class="left">
+					<img src="img/trainers_9.png" alt="#">
+					<p>
+						Женские Air Max
+					</p>
+					<p>
+						97 от 1 485 грн
+					</p>
+					<h4>в каталог</h5>
+				</div>
+				<div class="right">
+					<img src="img/trainers_10.png" alt="#">
+					<p>
+						Мужские Air Max
+					</p>
+					<p>
+						97 от 1 480 грн
+					</p>
+					<h4>в каталог</h5>
+				</div>
+				<div class="clearfix"></div>
+			</div>
+			<div class="advantages">
+				<div>
+					<span>	
+						Оплата при получении
+					</span>
+				</div>
+				<div>
+					<span>
+						Возврат 365 дней
+					</span>
+				</div>
+				<div>
+					<span>
+						Доставка за сутки 
+					</span>
+				</div>
+				<div>
+					<span>
+						Гарантия на весь товар
+					</span>
+				</div>
+			</div>
+			<div class="brands">
+				<div>
+					<img src="img/ico5.png" alt="Icon">
+				</div>
+				<div>
+					<img src="img/ico6.png" alt="Icon">
+				</div>
+				<div>
+					<img src="img/ico7.png" alt="Icon">
+				</div>
+				<div>
+					<img src="img/ico8.png" alt="Icon">
+				</div>
+				<div>
+					<img src="img/ico9.png" alt="Icon">
+				</div>
+				<div>
+					<img src="img/ico10.png" alt="Icon">
+				</div>
+				<div>
+					<img src="img/ico11.png" alt="Icon">
+				</div>
+				<div>
+					<img src="img/ico12.png" alt="Icon">
+				</div>
+			</div>
 		</div>
 		<footer>
-			
+			<div class="info">
+				<div>
+					<h4>
+						График работы:
+					</h4>
+					<p>
+						Заказы online 24/7
+					</p>
+					<p>
+						10:00-19:00 без выходных
+					</p>
+				</div>
+				<div>
+					<img src="img/ico_f.png" alt="Icon">
+					<span>
+						<p>093 170 13 21</p>
+						<p>093 170 13 21</p>
+						<p></p>
+					</span>
+				</div>
+				<div>
+					<img src="img/ico_f2.png" alt="Icon">
+					<h4>Мой заказ</h4>
+				</div>
+			</div>
+			<p>
+				Вы получили это письмо, потому что подписаны на рассылку dreamshoes.in.ua.
+				Если Вы не хотите получать рассылку, перейдите по ссылке: отписаться.
+			</p>
+			<p>
+				© 2018 Интернет-магазин cпортивной обуви Дримшуз
+			</p>
 		</footer>
 	</div>
 </body>
