--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
 					<img src="img/ico_f.png" alt="Icon">
 					<span>
 						<p>093 170 13 21</p>
-						<p>093 170 13 21</p>
-						<p></p>
+						<p>099 606 38 86</p>
+						<p>067 343 66 16</p>
 					</span>
 				</div>
 				<div>
@@ -297,13 +297,15 @@
 					<h4>Мой заказ</h4>
 				</div>
 			</div>
-			<p>
-				Вы получили это письмо, потому что подписаны на рассылку dreamshoes.in.ua.
-				Если Вы не хотите получать рассылку, перейдите по ссылке: отписаться.
-			</p>
-			<p>
-				© 2018 Интернет-магазин cпортивной обуви Дримшуз
-			</p>
+			<div class="text">
+				<p>
+					Вы получили это письмо, потому что подписаны на рассылку <span>dreamshoes.in.ua</span>.
+					Если Вы не хотите получать рассылку, перейдите по ссылке: <a href="#">отписаться</a>.
+				</p>
+				<p>
+					© 2018 Интернет-магазин cпортивной обуви Дримшуз
+				</p>
+			</div>
 		</footer>
 	</div>
 </body>
